# CG-raytracer

./: CMakeLists.txt  Makefile  README.md  bounded_plane.h  camera.h  color.h  cube.h  floor.h  hittable.h  hittable_list.h  image2.ppm  interval.h  light.h  main.cpp  mat3.h  material.h  objects.h  plane.h  quad.h  ray.h  rtweekend.h  sphere.h  texture.h  triangle.h  vec3.h
